--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lenis": "^1.3.16",
     "lucide-react": "^0.556.0",
     "motion": "^12.23.25",
     "next": "16.0.7",
